roles/firewall/templates/iptables.conf
# Generated by iptables-save v1.6.0 on Tue Aug 14 11:21:50 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [234689:1004751377]
:_tcp - [0:0]
:_udp - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j _tcp
-A INPUT -p udp -m udp -j _udp
-A INPUT -p icmp -j ACCEPT
-A INPUT -m limit --limit 1/sec -j LOG --log-prefix "iptables: "
-A INPUT -j REJECT --reject-with icmp-port-unreachable
-A _tcp -p tcp -m tcp --dport 22 -j ACCEPT
-A _tcp -p tcp -m tcp --dport 80 -j ACCEPT
-A _tcp -p tcp -m tcp --dport 443 -j ACCEPT
-A _udp -p udp -m udp --dport 67 -j ACCEPT
-A _udp -p udp -m udp --dport 68 -j ACCEPT
COMMIT
